@@ -1,3 +1,10 @@
+2008-11-28  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/idle-dialog.c (show_idle_dialog): mark the idle dialog as
+       visible before stopping the project timer so we don't start the no
+       project timeout timer when it's not needed.
+
+
 2008-11-27  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* src/timer.c (start_no_project_timer): Fixed the condition in which
